--- a/style.css
+++ b/style.css
@@ -17,22 +17,35 @@
     top: 0;
     left: 0;
     border: solid;
+    border-radius: 5px;
+    display: grid;
+    grid-template-rows: 1fr 3fr;
+    box-sizing: border-box;
+}
+
+#text-box-wrapper {
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+}
+
+#button-wrapper {
+    padding: 15px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(8, 1fr);
-    box-sizing: border-box;
+    grid-template-rows: repeat(6, 1fr);
 }
 
 .text-box {
     grid-column: 1/5;
     border-bottom: 1px solid #999;
-    margin: 0px 0 10px 0px;
+    margin: 0;
     font-size: 4em;
 }
 
 .btn {
-    background-image: linear-gradient(to right, rgba(51, 51, 51, 1), rgba(51, 51, 51, 0.9), rgba(51, 51, 51, 1));
-    border: 1px solid #aaa;
+    background-image: radial-gradient(rgba(51, 51, 51, 1), rgba(51, 51, 51, 0.95), rgba(51, 51, 51, 0.9));
+    margin: 1px;
+    border: 1px solid white;
     border-radius: 4px;
     color: white;
     font-size: 2em;
