--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+* {
+    box-sizing: border-box;
+}
 
 body {
     margin: 0;
@@ -28,21 +31,35 @@ body {
     grid-template-rows: repeat(2, 1fr);
 }
 
+.text-box {
+    display:flex;
+    align-items: center;
+    grid-column: 1/5;
+    border-bottom: 1px solid #999;
+    margin: 0;
+    font-size: 4em;
+}
+
+textarea {
+    width: 100%;
+    height: 55%;
+    resize: none;
+    border: none;
+    text-align: right;
+    padding: 0 1.1rem;
+    font-size: 2.5rem;
+}
+
+textarea:focus {
+    outline: none;
+}
+
 #button-wrapper {
      background-color: #6176A7;
     padding: 15px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(6, 1fr);
-}
-
-.text-box {
-    grid-column: 1/5;
-    border-bottom: 1px solid #999;
-    margin: 0;
-    font-size: 4em;
-    text-align: right;
-    padding: 0 0.7rem;
 }
 
 .btn {
