--- a/style.css
+++ b/style.css
@@ -34,13 +34,15 @@ body {
 .text-box {
     display:flex;
     align-items: center;
+    justify-content: flex-end;
     grid-column: 1/5;
     border-bottom: 1px solid #999;
     margin: 0;
+    padding: 0 15px;
     font-size: 4em;
 }
 
-textarea {
+/*textarea {
     width: 100%;
     height: 55%;
     resize: none;
@@ -52,7 +54,7 @@ textarea {
 
 textarea:focus {
     outline: none;
-}
+}*/
 
 #button-wrapper {
      background-color: #6176A7;
@@ -101,7 +103,7 @@ textarea:focus {
 #square-root-wrapper {
     width: fit-content;
     position: relative;
-    left: 20px;
+    left: 21px;
     top: 8px;
 }
 
