--- a/style.css
+++ b/style.css
@@ -36,7 +36,13 @@ body {
     border-bottom: 1px solid #999;
     margin: 0;
     padding: 0 15px;
-    font-size: 4em;
+    font: 4em Arial;
+}
+
+#history {
+    justify-content: flex-start;
+    font-size: 2.5em;
+    color: #999;
 }
 
 /*textarea {
