--- a/style.css
+++ b/style.css
@@ -45,6 +45,18 @@ body {
     color: #999;
 }
 
+#history img {
+    position: relative;
+    bottom: 5px;
+    left: 15px;
+    opacity: 50%;
+}
+
+#history span {
+    position: relative;
+    margin-right: 15px;
+}
+
 /*textarea {
     width: 100%;
     height: 55%;
