--- a/style.css
+++ b/style.css
@@ -28,14 +28,14 @@ body {
     #calc-wrapper {
         width: 100vw;
     }
+    .selector {
+        font-size: 13vw;
+    }
 }
 
 @media only screen and (max-height: 820px) {
     #calc-wrapper {
         height: 100vh;
-    }
-      .selector {
-        font-size: 9vh;
     }
 }
 
@@ -68,6 +68,12 @@ body {
     opacity: 50%;
 }
 
+@media only screen and (max-width: 550px) {
+    #history {
+        font-size: 10vw;
+    }
+}
+
 #history span {
     position: relative;
     margin-right: 15px;
@@ -87,7 +93,15 @@ body {
     border: 2px solid #444;
     border-radius: 4px;
     color: white;
-    font-size: 2em;
+    font-size: 2rem;
+    display: flex;
+    justify-content: center;
+}
+
+@media only screen and (max-width: 550px) {
+    .btn {
+        font-size: 7vw;
+    }
 }
 
 .btn:active {
@@ -118,16 +132,18 @@ body {
 }
 
 #square-root-wrapper {
-    width: fit-content;
+    height: 20px;
+    width: 20px;
     position: relative;
-    left: 21px;
-    top: 8px;
 }
 
 #line1 {
     border-bottom: 3px solid white;
     width: 0.5rem;
-    transform: skew(0, 60deg)
+    transform: skew(0, 60deg);
+    position: relative;
+    top: 15px;
+    right: 10px;
 }
 
 #line2 {
@@ -135,16 +151,16 @@ body {
     width: 1rem;
     transform: skew(0, -60deg);
     position: relative;
-    bottom: 9px;
-    left: 8px;
+    top: 5px;
+    right: 2px;
 }
 
 #line3 {
     border-bottom: 2px solid white;
     width: 1rem;
     position: relative;
-    bottom: 26px;
-    left: 24px;
+    bottom: 12px;
+    left: 14px;
 }
 
 .back-space {
