--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 
 @media only screen and (max-width: 550px) {
     #calc-wrapper {
-        width: 100vw;
+        width: 100%;
     }
     .selector {
         font-size: 13vw;
