--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,15 @@ body {
 }
 
 @media only screen and (max-width: 550px) {
-    #calc-wrapper {
+    #content-wrapper {
+        position: fixed;
+        top: 0;
+        left: 0;
         width: 100%;
+        height: 100%;
+    }
+    #calc-wrapper {
+        width: 100vw;
         box-shadow: none;
     }
     .selector {
