--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
 
 @media only screen and (max-width: 550px) {
     #content-wrapper {
-        position: fixed;
+        position: absolute;
         top: 0;
         left: 0;
         width: 100%;
