--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,8 @@ body {
         position: absolute;
         top: 0;
         left: 0;
-        width: 100%;
-        height: 100%;
+        width: 100vw;
+        height: 100vh;
     }
     #calc-wrapper {
         width: 100vw;
