--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ body {
     }
 }
 
-@media only screen and (max-height: 820px) {
+@media only screen and (max-height: 900px) {
     #calc-wrapper {
         height: 100vh;
         box-shadow: none;
@@ -106,6 +106,7 @@ body {
     font-size: 2rem;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 @media only screen and (max-width: 550px) {
