--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,12 @@
 }
 
 body {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    height: 100%;
     margin: 0;
 }
 
