--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,10 @@ body {
 }
 
 @media only screen and (max-height: 640px) {
-  .selector {
+  #calc-wrapper {
+      height: 100vh;
+  }
+    .selector {
     font-size: 12vh;
   }
 }
@@ -62,14 +65,14 @@ body {
 
 #text-box-wrapper {
     height: 25%;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
 }
 
 .text-box {
-    height: 50%;
     display:flex;
     align-items: center;
     justify-content: flex-end;
-    grid-column: 1/5;
     border-bottom: 1px solid #999;
     margin: 0;
     padding: 0 15px;
@@ -77,7 +80,6 @@ body {
 }
 
 #history {
-    height: 50%;
     justify-content: flex-start;
     font-size: 2.3em;
     color: #999;
@@ -105,9 +107,11 @@ body {
     height: 75%;
     background-color: #6176A7;
     padding: 15px;
+}
+.row {
+    height: 16.667%;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(6, 1fr);
 }
 
 .btn {
