--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ body {
         box-shadow: none;
     }
     .selector {
-        font-size: 13vw;
+        font-size: 10vw;
     }
 }
 
@@ -50,6 +50,9 @@ body {
     #calc-wrapper {
         height: 100vh;
         height: calc(var(--vh, 1vh) * 100);
+        position: fixed;
+        top: 0;
+        left: 0;
         box-shadow: none;
     }
 }
