--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    touch-action: manipulation;
 }
 
 body {
@@ -47,6 +48,9 @@ body {
 }
 
 @media only screen and (max-height: 820px) and (max-width: 450px) {
+    * {
+        overflow: hidden;
+    }
     #calc-wrapper {
         height: 100vh;
         height: calc(var(--vh, 1vh) * 100);
