--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ body {
     * {
         overflow: hidden;
     }
-    #calc-wrapper {
+    #calc-wrapper, #content-wrapper, body {
         height: 100vh;
         height: calc(var(--vh, 1vh) * 100);
         position: fixed;
@@ -125,7 +125,7 @@ body {
 .btn {
     width: 25%;
     background-image: linear-gradient(to bottom, rgba(51, 51, 51, 0.7), rgba(51, 51, 51, 1));
-    margin: 1px;
+    margin: 2px;
     border: 2px solid #444;
     border-radius: 4px;
     color: white;
@@ -210,6 +210,6 @@ body {
 }
 
 .zero {
-    width: 50%;
+    width: 51.2%;
 }
 
