--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,11 @@ body {
         left: 0;
         box-shadow: none;
     }
+
+    #content-wrapper {
+        height: 100vh;
+        height: calc(var(--vh, 1vh) * 100);
+    }
 }
 
 @media only screen and (max-height: 500px) {
