--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@ body {
     left: 0;
     margin: 0;
     padding: 0;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 #content-wrapper {
@@ -84,23 +88,25 @@ body {
 #button-wrapper {
     height: 75%;
     background-color: #6176A7;
-    padding: 15px;
+    padding: 12px;
     width: 100%;
 }
 .row {
     width: 100%;
-    height: 16.667%;
-    display: flex;
+    height: 15.667%;
+    margin: 3.5px 0px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
 }
 
 .btn {
-    width: 25%;
-    margin: .25%;
-    background-image: linear-gradient(to bottom, rgba(51, 51, 51, 0.7), rgba(51, 51, 51, 1));
+    height: 100%;
+    background-image: linear-gradient(to bottom, rgb(99, 99, 99), rgba(51, 51, 51, 1));
     border: 2px solid #444;
     border-radius: 4px;
     color: white;
-    font-size: 2rem;
+    font: 2rem Arial;
+    margin: 2px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -108,12 +114,18 @@ body {
 
 .btn:active {
     background-color: rgb(51, 51, 51);
+    background-image: none;
     position: relative;
     top: 1px;
 }
 
-.btn:focus {
-    outline: none;
+.btn img {
+    position: relative;
+    right: 2px;
+}
+
+#backspace-wrapper {
+    border: solid;
 }
 
 .square-wrapper {
@@ -165,13 +177,8 @@ body {
     left: 14px;
 }
 
-.back-space {
-    display: flex;
-    justify-content: center;
-}
-
 .zero {
-    width: 50.5%;
+    grid-column: 1/3;
 }
 
 @media only screen and (max-height: 640px) {
@@ -185,6 +192,7 @@ body {
     .selector {
         font-size: 0.8em;
     }
+
     @media only screen and (min-height: 500px) {
             .selector {
             font-size: 10vh;
